# hs-lens-experiment

./: CHANGELOG.md  field-lenses.asm  field-lenses.cabal
app/: CommonFields.hs  Dog.hs  HasField.hs  Lens.hs  Main.hs  Person.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
