cabal-version:      2.4
name:               field-lenses
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hannes Steffenhagen
maintainer:         hannes.steffenhagen@betterdoc.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable field-lenses
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Lens
                   , HasField
                   , Person
                   , Dog
                   , CommonFields

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.0.0
                      , sdl2 ^>= 2.5
                      , template-haskell ^>= 2.18
                      , lens ^>= 5.1
                      , text
    hs-source-dirs:   app
    ghc-options:
      -O2
      -threaded
      -with-rtsopts=-NN
      -with-rtsopts=-qm
    default-language: Haskell2010
